  EntityModel.uiSetValue() renamed to setValue()
  EntityModel.setValue() renamed to setPropertyValue()
  EntityModel.addDetailModels() now checks if the detail models are based on valid foreign keys
  Property.maxLength field added
  EntityUiUtil.createTextField() now uses the above field to restrict the allowed number of characters in text fields
  UiUtil.makeUpperCase() overloaded for TextFieldPlus
  Property, replaced constructor arguments with chained method calls
  EntityProxy.addEntityProxy() renamed to setEntityProxy()
  EntityRepository.getDatabaseProperties() implemented with ListIterator instead of HashSet
  LoginPanel, initial focus bug in linux finally fixed
  EntityModel.addDetailModels() doesn't check if the detail models are based on valid foreign keys anymore
  EntityLookupModel.searchStringRepresentsSelected() now returns true for zero selected entities and an empty search string
  EntityPropertyEditor.getValue(), didn't take into consideration that the input field could be a EntityLookupField
  Property.propertyID, propertyType and caption fields privatized
  EntityRepository.initialize() renamed to define()
  DoubleFieldDocument and IntFieldDocument now handle null string values like their superclass
  TextBeanPropertyLink.textComponent field replaced by document
  ToggleBeanPropertyLink.button field replaced by buttonModel field
  ToggleBeanPropertyLink.getButtonModel() added
  ControlProvider toggle control methods changed according to the above
  SelectedItemBeanPropertyLink no longer implements ItemListener, uses an anonymous instance instead
  ui.property.*PropertyLink constructor argument order changed, moved UI component up front
  BooleanPropertyLink, buttonModel argument removed from constructor, buttonModel field plus getter added
  EntityUiUtil.createCheckBox() changed according to the above
  EntityPropertyLinkTest.testDatePropertyLink() improved
  EntityTableModel.filteredEntities renamed to hiddenEntities